// Vitest Snapshot v1

exports[`Tag or CheckTag > :Tag:props > :checked 1`] = `
<span
  checked="checked"
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :closable 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--close"
>
  <span />
  <svg
    class="t-icon t-icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :disabled 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-is-disabled t-tag--disabled"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :maxWidth 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--ellipsis"
>
  <span
    class="t-tag--text"
    style="max-width: 100px;"
  />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:mark 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--mark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:round 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--round"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :shape:square 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :size:large 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-size-l"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :size:medium 1`] = `<!---->`;

exports[`Tag or CheckTag > :Tag:props > :size:small 1`] = `<!---->`;

exports[`Tag or CheckTag > :Tag:props > :theme: 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:dark;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--dark"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:danger 1`] = `
<span
  class="t-tag t-tag--danger t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:danger 2`] = `
<span
  class="t-tag t-tag--danger t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:default 1`] = `
<span
  class="t-tag t-tag--default t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:default 2`] = `
<span
  class="t-tag t-tag--default t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:primary 1`] = `
<span
  class="t-tag t-tag--primary t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:primary 2`] = `
<span
  class="t-tag t-tag--primary t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:success 1`] = `
<span
  class="t-tag t-tag--success t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:success 2`] = `
<span
  class="t-tag t-tag--success t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:warning 1`] = `
<span
  class="t-tag t-tag--warning t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > :Tag:props > :variant:light;theme:warning 2`] = `
<span
  class="t-tag t-tag--warning t-tag--light"
>
  <span />
</span>
`;

exports[`Tag or CheckTag > @event: Tag > Event passthrough: close 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark t-tag--close"
>
  <span />
  <svg
    class="t-icon t-icon-close t-tag__icon-close"
    fill="none"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M7.05 5.64L12 10.59l4.95-4.95 1.41 1.41L13.41 12l4.95 4.95-1.41 1.41L12 13.41l-4.95 4.95-1.41-1.41L10.59 12 5.64 7.05l1.41-1.41z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Tag or CheckTag > CheckTag:props > :checked 1`] = `
<span
  class="t-tag t-tag--check t-tag--default t-size-m t-tag--checked"
/>
`;

exports[`Tag or CheckTag > CheckTag:props > :disabled 1`] = `
<span
  class="t-tag t-tag--check t-tag--default t-size-m t-is-disabled t-tag--disabled"
/>
`;

exports[`Tag or CheckTag > Tag:slot > <icon> 1`] = `
<span
  class="t-tag t-tag--default t-tag--dark"
>
  <div />
  <span />
</span>
`;
